rsvg-convert: Print errors to stderr

https://bugzilla.gnome.org/show_bug.cgi?id=683380